@@ -1,5 +1,7 @@
 dnl -*- autoconf -*-
-
+dnl SPDX-FileCopyrightText: <text> © 2016, 2020 Alan D. Salewski <ads@salewski.email> </text>
+dnl SPDX-License-Identifier: GPL-2.0-or-later
+dnl
 dnl ads_PROG_PERL([required_perl_version])
 dnl
 dnl This macro tests for the existence of a perl interpreter on the target
