@@ -1,4 +1,6 @@
 #! /bin/bash -
+# SPDX-FileCopyrightText: <text> © 2016, 2020 Alan D. Salewski <ads@salewski.email> </text>
+# SPDX-License-Identifier: GPL-2.0-or-later
 
 # Usage:
 #   bootstrap [ AUTORECONF_ARG ... ]
