@@ -1,5 +1,8 @@
 dnl Process this file with autoconf to produce a configure script. -*-Autoconf-*-
 
+dnl SPDX-FileCopyrightText: <text> © 2016, 2017, 2020 Alan D. Salewski <ads@salewski.email> </text>
+dnl SPDX-License-Identifier: GPL-2.0-or-later
+
 dnl +-------------------------+
 dnl |  Autotools Boilerplate  |
 dnl +-------------------------+
