@@ -1,6 +1,6 @@
 #!/bin/bash -
-
-# Copyright (c) 2016, 2017, 2019, 2020 Alan D. Salewski <ads@salewski.email>
+# SPDX-FileCopyrightText: <text> © 2016, 2017, 2019, 2020 Alan D. Salewski <ads@salewski.email> </text>
+# SPDX-License-Identifier: GPL-2.0-or-later
 #
 #     This program is free software; you can redistribute it and/or modify
 #     it under the terms of the GNU General Public License as published by
