@@ -1,6 +1,8 @@
 #! @PERL@
 # -*- perl -*-
 # @configure_input@
+# SPDX-FileCopyrightText: <text> © 2016, 2020 Alan D. Salewski <ads@salewski.email> </text>
+# SPDX-License-Identifier: GPL-2.0-or-later
 
 # Copyright (c) 2016, 2020 Alan D. Salewski <ads@salewski.email>
 #
