@@ -41,6 +41,11 @@ which they were fixed will be noted here, as well.
     blockage. For best results, use the new address.
 
 
+*** issue 50: added SPDX headers to source files
+
+    https://github.com/salewski/ads-github-tools/issues/50
+
+
 * ads-github-tools 0.3.0 (2020-04-09)
 
 ** fixes
